elementarclash: remove dead code and add last todos